--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         {% endif %}
       </div>
       {% if page.chapter %}
-        <span>Chapter {{ page.chapter }} of {{ site.chapters.size }}</span>
+        <span>Kapitel {{ page.chapter }} von {{ site.chapters.size }}</span>
       {% else %}
         <a href="/book/introduction/">Read the book &rarr;</a>
       {% endif %}
