--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
     <div class="wrapper">
       <h1 class="post-title">{{ page.title | escape }}</h1>
       <p class="big">{{ page.intro }}</p>
-      <p class="big fancy">by Matt Henderson</p>
+      <p class="big fancy">von Matt Henderson</p>
     </div>
   </header>
 
@@ -20,7 +20,7 @@ layout: default
 
   <div class="section alt" id="toc">
     <div class="wrapper">
-      <h2>Table of Contents</h2>
+      <h2>Inhaltsverzeichnis</h2>
 
       <ol class="toc">
       {% for chapter in site.chapters %}
@@ -47,7 +47,7 @@ layout: default
         {% endif %}
       {% endfor %}
       <div class="post-continue">
-        <a href="/praise/">More praise for the book &rarr;</a>
+        <a href="/praise/">Mehr Lob für das Buch &rarr;</a>
       </div>
     </div>
   </div>
